[package]
name = "normsphere"
version = "0.1.0"
edition = "2021"
description = """
Generate a sphere of tangent-space normals for use in hand-painting normal maps.\
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
image = "0.25.6"
nalgebra = "0.33.2"
